@@ -601,6 +601,11 @@ class ConaryContext(ConfigSection):
                                             '~/.conary/use'))
     user                  =  CfgUserInfo
     baseClassDir          =  (CfgPath, '/usr/share/conary/baseclasses')
+    verifyDirsNoNewFiles  =  (CfgPathList, ('/proc', '/sys', '/home', '/dev',
+                                            '/mnt', '/tmp', '/var/tmp',
+                                            '/var/log', '/var/lock', '/var/run',
+                                            '/var/lib/conarydb',
+                                            '/media', '/initrd' ))
 
     def _resetSigMap(self):
         self.signatureKeyMap = []
